=== 1.9.1 (2019-07-22)

* [SECURITY] Escape object display name when displaying association links (adam12)

=== 1.9.0 (2018-07-18)

* Add support for using flash string keys in the Roda support, to work with Roda's sessions plugin (jeremyevans)

* Show correct page title on error pages (jeremyevans)

=== 1.8.0 (2018-06-11)

* Add support for Roda route_csrf plugin for request-specific CSRF tokens (jeremyevans)

* Default to size of 10 for select multiple inputs (jeremyevans)

=== 1.7.0 (2017-10-27)

* Respect Model#forme_namespace method for parameter names (adam12, jeremyevans) (#9)

* Typecast column values when searching (jeremyevans)

=== 1.6.0 (2017-05-04)

* Fix mtm code when using model classes with different primary key names (jeremyevans)

* Work with Sinatra 2 (jeremyevans)

* Use btn-xs class instead of btn-mini for small buttons (jeremyevans)

=== 1.5.0 (2016-11-18)

* Allow autocompleting for associated objects even if current class doesn't support autocompleting (jeremyevans)

* [SECURITY] Fix check for non-idempotent GET requests (jeremyevans)

* Fix some deprecation warnings on Rails 5 (jeremyevans)

* Make sinatra routes handle namespaced models by default (jeremyevans)

=== 1.4.0 (2016-05-18)

* Handle selecting a blank object during show/edit/delete/mtm_edit by showing the same page (jeremyevans)

* Support UUID primary keys (badosu, jeremyevans) (#6)

* Add Request#env for getting the environment for the request (jeremyevans)

* Handle search results pagination correctly when an id parameter is used (badosu, jeremyevans) (#5)

=== 1.3.0 (2016-02-02)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

* Make autoforme.js compatible with turbolinks (mrbrdo) (#3)

* Force explicit labeler on show page, so that two columns are used (jeremyevans) (#2)

* Add edit_html and show_html for overriding the html used for a field (jeremyevans) (#1)

* Give the browse/search tables an id (jeremyevans)
